# bfai

./: .gitignore  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/MoriorGames/: Definitions.h
Classes/MoriorGames/Containers/: BattleContainer.cpp  BattleContainer.h  GridContainer.cpp  GridContainer.h
Classes/MoriorGames/EventListeners/: BattleActionDispatcher.cpp  BattleActionDispatcher.h  BattleEventListener.cpp  BattleEventListener.h  BattleEventOfflinePublisher.cpp  BattleEventOfflinePublisher.h  BattleEventOnlinePublisher.cpp  BattleEventOnlinePublisher.h  BattleEventPublishable.h  HeroMoveEventListener.cpp  (+1 more)
Resources/: world-sprites.plist
Resources/data/: api-data.json  battle.json  heroes.json  messages.en.json  messages.es.json  skills.json  skillsHeroes.json  user.json  x-campaign-100.json  x-campaign-101.json  x-campaign-102.json  x-campaign-103.json  x-campaign-104.json  x-campaign-105.json  x-campaign-106.json  x-campaign-107.json  x-campaign-108.json  x-campaign-109.json
Resources/sprites/: atlas.plist  battle-effects.plist  bot.plist  fractal.plist  jaimie.plist  katia.plist  knuckles.plist  nexus.plist  paul.plist  pink.plist  portraits.plist  shield.plist  world.plist
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android-studio/: gradle.properties  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android/jni/: Android.mk
proj.ios_mac/bfai.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: bfai.sln
(+147 files in other folders)
